# my_iwanna

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
about/: map_format.txt  test_map0.map  test_map1.map  test_map10.map  test_map11.map  test_map2.map  test_map3.map  test_map4.map  test_map5.map  test_map6.map  test_map7.map  test_map8.map  test_map9.map
res/: res.qrc
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/UI/about/: about.cpp  about.ui
src/UI/game/: gameui.cpp  gameui.ui
src/entity/:  Resurrection.cpp  Barrier.cpp  Entity.cpp  Player.cpp  Portal.cpp  Resurrection.cpp  Trap.cpp
src/entityset/: EntitySet.cpp
src/game/: Game.cpp  ViewModel.cpp  _game_impl.cpp
src/hotarea/: HotArea.cpp
src/include/UI/about/: about.h
src/include/UI/game/: gameui.h
src/include/common/: common.h
src/include/entity/: Barrier.h  Entity.h  Player.h  Portal.h  Resurrection.h  Trap.h
src/include/entityset/: EntitySet.h
src/include/game/: Game.h  ViewModel.h  _game_impl.h
src/include/hotarea/: HotArea.h
src/include/map_generator/: map_generator.h
src/map_generator/: map_generator.h
test/: CMakeLists.txt  test_main.cpp
